--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 <div class="textbox">
     <h1>Pesona Jombang</h1>
     <p>Temukan informasi update, mengenai rekomendasi wisata dan kuliner di kota Jombang! </p>
-    <a href="" class="btn">Eksplor Sekarang</a>
+    <a href="#eks" class="btn">Eksplor Sekarang</a>
 </div>
 
 </section>
 
 <!-- Rekomendasi -->
-<section class="rekom">
+<section id="eks" class="rekom">
     <h1>REKOMENDASI</h1>
     <p>Jombang memiliki banyak destinasi wisata dan kuliner yang menarik untuk dijelajahi.
         Kami memberikan rekomendasi terbaik untuk Anda agar pengalaman berwisata di Jombang semakin berkesan.</p>
